--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="http://github.com">GitHub project</a>
+    <a class="sidebar-nav-item" href="https://github.com/finalxcode/stardust.github.io">GitHub</a>
     <span class="sidebar-nav-item">Version {{ site.version }}</span>
   </nav>
 
