--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,13 +15,13 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/naringu.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/form.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/../../../public/css/naringu.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/../../../public/css/syntax.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/../../../public/css/form.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
   <!-- Icons -->
-  <link rel="shortcut icon" href=".{{ site.baseurl }}public/favicon.ico">
+  <link rel="shortcut icon" href=".{{ site.baseurl }}/../../../public/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}atom.xml">
