--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 
 <div id="disqus_thread"></div>
 <script>
-
+    var disqus_shortname = 'StardustBlog';
     /**
      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
