--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="https://github.com/finalxcode/stardust.github.io">GitHub</a>
-    <span class="sidebar-nav-item">Version {{ site.version }}</span>
+    <!--<span class="sidebar-nav-item">Version {{ site.version }}</span>-->
   </nav>
 
   <div class="sidebar-item">
